# typhe.us

./: .dockerignore  .gitignore  cleanup-git.sh  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.devcontainer/: devcontainer.json
backend/src/: main.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/go-engine/: Cargo.toml
frontend/go-engine/src/: lib.rs
frontend/src/: app.css  app.html
frontend/src/lib/: go-wasm.d.ts  go.ts
frontend/src/lib/components/tracker/: RetroButton.svelte  RetroButtonGroup.svelte  TrackerColumn.svelte  TrackerGroup.svelte  TrackerWindow.svelte
frontend/src/lib/go-wasm/: README.md  go_engine.d.ts  go_engine.js  go_engine_bg.wasm  go_engine_bg.wasm.d.ts  package.json
frontend/src/lib/tracker-wasm/: package.json  tracker_dsp.d.ts  tracker_dsp.js  tracker_dsp_bg.wasm  tracker_dsp_bg.wasm.d.ts
frontend/src/lib/utils/: colorUtils.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/go/: +page.svelte
frontend/src/routes/tracker/: +page.svelte
frontend/src/routes/tracker/virtual-piano/: +page.svelte
frontend/tracker-dsp/: Cargo.toml
frontend/tracker-dsp/src/: lib.rs
